--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'android-apt'
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
@@ -31,4 +31,5 @@ dependencies {
     compile project(':xutils')
     compile files('libs/gson-2.2.1.jar')
     compile project(':Viewpagerindicator_library')
+    compile 'com.android.support:design:25.3.1'
 }
